<resources>
    <string name="app_name">WebServicesAndroid</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="actualizar_materia">Actualizar Materias</string>
    <string name="promedio_alumno">Promedio de Alumno</string>
    <string name="ingresar_nota">Ingresar Nota</string>
    <string name="title_activity_materia">MateriaActivity</string>
    <string name="title_activity_promedio_alumno">PromedioAlumnoActivity</string>
    <string name="title_activity_ingresar_nota">IngresarNotaActivity</string>
    <string name="indicacion_materia">A partir de que fecha desea actualizar?</string>
    <string name="formato_fecha">dd/mm/aaaa</string>
    <string name="Texto1">NetBeans-Glassfish</string>
    <string name="Boton0">L</string>
    <string name="Boton0SV">S</string>
    <string name="Boton1">Local </string>
    <string name="Boton2">SV Local</string>
    <string name="Boton3">SV publico</string>
    <string name="Texto2">PHP</string>
    <string name="Boton4">Local</string>
    <string name="Boton5">SV Loca</string>
    <string name="Boton6">SV publico</string>
    <string name="Boton7">Guardar</string>
    <string name="carnet">Carnet</string>
    <string name="cod_materia">Codigo Materia</string>
    <string name="ciclo">Ciclo</string>
    <string name="nota_final">Nota Final</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_actualizar_alumno">ActualizarAlumnoActivity</string>
    <string name="title_activity_actualizar_materia">ActualizarMateriaActivity</string>

</resources>
